fix(chat): clear SonarCloud reliability and maintainability findings
Guard.require hides its throw behind a lambda, so the analyser keeps exploring the null path and flagged body.length() in Message.validatePayload as a guaranteed NPE. Replaced the null guards with in-method if-throw, which is the same fix applied in promotion. Also: constants for the duplicated STOMP topic prefix and payload keys, debug logging instead of empty method bodies in the noop broadcaster, @Nullable on the two ChannelInterceptor.preSend overrides to honour the package-level @NonNullApi, and Math.clamp in place of nested Math.min/Math.max.